gateway/kubernetes/service/debug-service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: notflix
  name: gateway-debug
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
