gateway/kubernetes/service/internal-service.yml
kind: Service
apiVersion: v1
metadata:
  name: gateway
  namespace: notflix
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
