gateway/kubernetes/service/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: gateway
              servicePort: 8080
